# Terminal.AI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  text.txt
.github/workflows/: publishpypi.yml
SampleProject/: helper.py  main.py  utils.py
aarham/: setup.py
aarham/mhacks1/: __init__.py
aarham/testing_outside_package/: main_testing2.py
gatherFiles/: CreateGraph.py
sampleColor/: color.py
src/debug-python/: color.py
src/swibin/: __init__.py  __main__.py  cli.py  color.py  describe_error.py  get_openai_key.py  insights.py  wrapper.py
src/test/: main.py
src/test/aarham_test/: main_testing1.py
src/test/helpers/: vectormath.py
test/: main.py
test/helpers/: vectormath.py
